--- a/main.html
+++ b/main.html
@@ -1,14 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Table</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-    </table>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tables in Tables</title>
+  <style>
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin: 10px 0;
+    }
+    th, td {
+      border: 1px solid #000;
+      padding: 10px;
+      text-align: center;
+    }
+    th {
+      background-color: #f4f4f4;
+    }
+    .black-cell {
+      background-color: #000;
+      color: #fff;
+    }
+  </style>
+</head>
+<body>
+  <!-- Main Table -->
+  <table>
+    <thead>
+      <tr>
+        <th>Main Table</th>
+        <th>Details</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <!-- Nested Table 1 -->
+          <table>
+            <thead>
+              <tr>
+                <th>Nested Table 1</th>
+                <th>Column 1</th>
+                <th>Column 2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+        <td>
+          <!-- Nested Table 2 -->
+          <table>
+            <thead>
+              <tr>
+                <th>Nested Table 2</th>
+                <th>Column 1</th>
+                <th>Column 2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>4</td>
+                <td class="black-cell">HTML</td>
+                <td>6</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <!-- Nested Table 3 -->
+          <table>
+            <thead>
+              <tr>
+                <th>Nested Table 3</th>
+                <th>Column 1</th>
+                <th>Column 2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>List</td>
+                <td>
+                  <!-- List inside Nested Table 3 -->
+                  <ul>
+                    <li>List item 1</li>
+                    <li>List item 2</li>
+                    <li>List item 3</li>
+                  </ul>
+                </td>
+                <td>Extra</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+        <td>
+          <!-- Nested Table 4 -->
+          <table>
+            <thead>
+              <tr>
+                <th>Nested Table 4</th>
+                <th>Column 1</th>
+                <th>Column 2</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>8</td>
+                <td>9</td>
+                <td>10</td>
+              </tr>
+            </tbody>
+          </table>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</body>
 </html>
